feat: update the deployment targets client to have 201 response
