# ververica-platform-swagger.json
@@ -875,6 +875,12 @@
         "responses": {
           "default": {
             "description": "successful operation"
+          },
+          "201": {
+            "description": "successful creation",
+            "schema": {
+              "$ref": "#/definitions/DeploymentTarget"
+            }
           }
         }
       }
